--- a/padding.html
+++ b/padding.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>caja</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div class="caja">
+    <p>Este es el contenido de la caja</p>
+  </div>
+</body>
+</html>
