--- a/padding.html
+++ b/padding.html
@@ -5,6 +5,13 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+  <h1>LA CAJA</h1>
+  <p>Margin: El espacio exterior que rodea un elemento, creando un espacio entre este y otros elementos.</p>
+  <p>Padding: El espacio interior que rodea el contenido de un elemento, creando un espacio entre el borde y el contenido.</p>
+  <p>Border: La línea que delimita un elemento, definiendo su contorno.</p>
+  <p>Width y Height: Las dimensiones del contenido de un elemento.</p>
+  
   <div class="caja">
     <p>Este es el contenido de la caja</p>
   </div>
