--- a/targeta.html
+++ b/targeta.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Tarjeta</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div class="tarjeta">
+    <h2>Adrian Hustea</h2>
+    <h3>Programador</h3>
+    <p>Estoy en proceso de convertirme en programador y tengo muchas ganas de aprender</p>
+  </div>
+</body>
+</html>
