--- a/targeta.html
+++ b/targeta.html
@@ -8,7 +8,7 @@
   <div class="tarjeta">
     <h2>Adrian Hustea</h2>
     <h3>Programador</h3>
-    <p>Estoy en proceso de convertirme en programador y tengo muchas ganas de aprender</p>
+    <p>Estoy en proceso de convertirme en programador y tengo ganas de aprender</p>
   </div>
 </body>
 </html>
