--- a/que_es_css.html
+++ b/que_es_css.html
@@ -1,1 +1,23 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>CSS</title>
+</head>
+<body>
+  <h1>CSS</h1>
+  <ol>
+    <li>
+      <h3>¿Qué es CSS y para qué sirve?</h3>
+      <p>CSS (Cascading Style Sheets) es un lenguaje de diseño utilizado para dar estilo a las páginas web. Define cómo se verán los elementos HTML, como el color, tamaño de fuente y disposición.</p>
+    </li>
+    <li>
+      <h3>Formas de aplicar CSS en HTML</h3>
+      <p>Hay tres formas principales: en línea (dentro del elemento HTML), interno (dentro de la sección `<head>` del HTML) y externo (en un archivo CSS vinculado).</p>
+    </li>
+    <li>
+      <h3>**Recursos de aprendizaje**  </h3>
+      <p>Recomiendo MDN Web Docs, FreeCodeCamp y W3Schools.</p>
+    </li>
+  </ol>
+</body>
+</html>
